tests/error/type_match/base_case_rvalue_to_lvalue_ref3.bz
function test()
{
	let i = 0;
	let _: &auto = move i;
}
